tests/ui/pattern/pat-tuple-bad-type.stderr
error[E0282]: type annotations needed
  --> $DIR/pat-tuple-bad-type.rs:2:9
   |
LL |     let x;
   |         ^
...
LL |         (..) => {}
   |         ---- type must be known at this point
   |
help: consider giving `x` an explicit type
   |
LL |     let x: /* Type */;
   |          ++++++++++++

error[E0308]: mismatched types
  --> $DIR/pat-tuple-bad-type.rs:10:9
   |
LL |     match 0u8 {
   |           --- this expression has type `u8`
LL |         (..) => {}
   |         ^^^^ expected `u8`, found `()`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
